--- a/batch-rest/src/main/resources/application.properties
+++ b/batch-rest/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.url=jdbc:h2:mem:bootapp;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.batch.job.enabled=false
