--- a/batch-rest/src/main/resources/application.properties
+++ b/batch-rest/src/main/resources/application.properties
@@ -1,13 +1,34 @@
 spring.output.ansi.enabled=always
 
 # http://localhost:8080/h2-console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
 
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:bootapp;DB_CLOSE_DELAY=-1
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:bootapp;DB_CLOSE_DELAY=-1
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.batch.job.enabled=false
+#spring.batch.initialize-schema=always
+
+# Database SQL Server
+spring.datasource.initialize=false
+spring.datasource.hikari.connection-test-query=SELECT 1 FROM DUAL
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.jdbc-url=jdbc:sqlserver://sqlserver\\sql2012;databaseName=BATCH
+spring.datasource.username=eivfinanciero2
+spring.datasource.password=rv760
+
+spring.batch-datasource.jdbc-url=jdbc:sqlserver://sqlserver\\sql2012;databaseName=BATCH_2
+spring.batch-datasource.username=eivfinanciero2
+spring.batch-datasource.password=rv760
+
+# JPA
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=none
