Agrega esquema de base de datos batch

--- a/batch-rest/src/main/resources/application.properties
+++ b/batch-rest/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.datasource.jdbc-url=jdbc:sqlserver://sqlserver\\sql2012;databaseName=BATC
 spring.datasource.username=eivfinanciero2
 spring.datasource.password=rv760
 
-spring.batch-datasource.jdbc-url=jdbc:sqlserver://sqlserver\\sql2012;databaseName=BATCH_2
+spring.batch-datasource.jdbc-url=jdbc:sqlserver://sqlserver\\sql2012;databaseName=BATCH_JOBS
 spring.batch-datasource.username=eivfinanciero2
 spring.batch-datasource.password=rv760
 
